--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <h1>Onur Çelik</h1>
-
-<!-- Kendin hakkında bilgi vereceğin kısım -->
-
 <h2>Hakkımda</h2>
+<p>Merhaba benim adım Onur Çelik 23 yaşındayım 
+    şuanda patika.dev  vasıtasıyla front-end eğitimini tamamlamaktayım. En sevdiğim filmler arasında yüzüklerin efendisi serisi vardır.  </p>
 
-<p>Şuanda Patika.dev'in Front-End Eğitimi üzerine çalışıyorum. Popüler bilim yayınlarını okumayı ve extreme sporlar
-    ile ilgilenmeyi severim.
-</p>
+ <h3>Sevdiğim İçerikler.</h3>
 
-<h3>Hoşlandığım Filmler</h3>
+<div> <ol>
+     <li>Diziler</li>
+<ul>
+    <li>The Office</li>
+    <li>How I Met Your Mother</li>
+    <li>Brooklyn Nine-Nine</li>
+</ul>     
+     <li>Filmler</li>
+    <ul>
+        <li>Yüzüklerin Efendisi</li>
+        <li>Scott Pilgrim Vs The World</li>
+        <li>Forrest Gump</li>
+    </ul>
+     </ul>
+     <li> Kitaplar</li>
 
+<ul>
+    <li>Simyacı</li>
+    <li>Yüzüklerin Efendisi </li>
+    <li>Sapiens</li>
+</ul>
+ </ol>
+</div>
 
+ <h2>Sevdiğim Film</h2>
 
-<!-- Eğer Sırasız Liste açmak istiyorsan <ul> tagını kullanmalısın.
-          Sıralı  Liste kullanmak için <ol> tagını kullanmalısın. -->
+ <h3>Yüzüklerin Efendisi</h3>
 
-            <!-- Liste içerisine bir madde eklemek için <li> tagını kullanmalısın. -->
-
-              <ul> <li>Yüzüklerin Efendisi serisi</li>
-                    <li>Contact </li>
-                    <li>The Prestige </li> 
-
-
-              </ul>
-
-              <h2>Hoşlandığım Kitaplar</h2>
-
-              <ol>
-              <li>Simyacı </li>
-<li>Alamut Kalesi</li>
-<li>Sapiens</li>
-
-              </ol>
+<img src="https://i4.hurimg.com/i/hurriyet/75/750x422/600ad95f7152d817f4b4962b.jpg" title='Yüzüklerin Efendisi Film Posteri' />
+<p>Yüzüklerin Efendisi Yüzük Kardeşliği.</p>
